[tool.poetry]
name = "jg-private-servers"
version = "0.1.0"
description = ""
authors = ["thetrueryan <georgytoper@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
aiocryptopay = "0.4.8"
aiofiles = "24.1.0"
aiogram = "3.21.0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.12.15"
aiosignal = "1.4.0"
alembic = "1.16.4"
annotated-types = "0.7.0"
asyncpg = "0.30.0"
attrs = "25.3.0"
black = "25.1.0"
certifi = "2023.11.17"
click = "8.2.1"
frozenlist = "1.7.0"
greenlet = "3.2.3"
idna = "3.10"
magic-filter = "1.0.12"
mako = "1.3.10"
markupsafe = "3.0.2"
multidict = "6.6.3"
mypy-extensions = "1.1.0"
packaging = "25.0"
pathspec = "0.12.1"
platformdirs = "4.3.8"
propcache = "0.3.2"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
pydantic-core = "2.33.2"
python-dotenv = "1.1.1"
sqlalchemy = "2.0.42"
strenum = "0.4.15"
typing-inspection = "0.4.1"
typing-extensions = "4.14.1"
yarl = "1.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
